# atropos

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  =2.1.0  AGENTS.md  AI_INTEGRATION_DEPLOYMENT_GUIDE.md  AMIEN_COMPLETE_DEPLOYMENT_SUMMARY.md  AMIEN_PRODUCTION_SUMMARY.md  AMIEN_SYSTEM_STATUS_REPORT.md  AUTONOMOUS_CLOUD_DEPLOYMENT_PLAN.md  BILLING_SETUP_GUIDE.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  DATABASE_SCHEMA.MD  DEO_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_PLAN.md  Dockerfile  FINAL_AMIEN_COMPLETION_SUMMARY.md  FINAL_DEPLOYMENT_SUMMARY.json  FINAL_SYSTEM_SUMMARY.md  GCP_PERMISSIONS_REQUEST.md  GEMINI_SETUP.md  INTERN_BOOTCAMP_DATAGEN_README.md  Initial_Ideas.md  LLM_SOCIETY_README.md  ORCHESTRATION.md  OpenCode.md  PHASE_1_COMPLETE.md  PHASE_BETA_ROADMAP.md  POPULATION_DYNAMICS_README.md  PRACTICAL_AI_INTEGRATION_SUMMARY.md  PROD_DEPLOYMENT.md  PROJECT_IMPLEMENTATION_ROADMAP.md  README.md  REAL_RESEARCH_ACHIEVEMENT_SUMMARY.md  SETUP.md  (+162 more)
.aider.tags.cache.v4/: cache.db
.claude/: settings.local.json
.github/: pull_request_template.md
.opencode/: opencode.db-shm  opencode.db-wal
ai_research/: __init__.py  ai_scientist_manager.py
amien_research_output/: ai_scientist_paper_20250527_105120.md  ai_scientist_paper_20250527_191515.md  ai_scientist_paper_20250527_215801.md  ai_scientist_paper_20250527_215939.md  ai_scientist_paper_20250527_220058.md  ai_scientist_paper_20250527_220113.md  ai_scientist_paper_20250527_230943.md  ai_scientist_paper_20250527_230957.md  ai_scientist_paper_20250527_231016.md  ai_scientist_paper_20250527_233100.md  ai_scientist_paper_20250528_003436.md  fallback_optimizer_20250527_230946.py  integration_report_20250527_105123.md  integration_report_20250527_233103.md  integration_report_20250528_003439.md  synthetic_vr_experiments.json  vr_optimizer_function_20250527_105123.py  vr_optimizer_function_20250527_191518.py  vr_optimizer_function_20250527_215803.py  vr_optimizer_function_20250527_220102.py  vr_optimizer_function_20250527_230946.py  vr_optimizer_function_20250527_231018.py  vr_optimizer_function_20250527_233103.py  vr_optimizer_function_20250528_003439.py
analytics/: analytics_summary_20250527_214558.json  dashboard_20250527_214557.json  dashboard_20250527_215929.json  dashboard_20250527_220102.json  dashboard_20250527_230947.json  recommendations_20250527_214558.json  recommendations_20250527_215930.json  recommendations_20250527_220103.json  recommendations_20250527_230947.json
asset_test_results/: metrics.db
atroposlib/: FAQ.md  type_definitions.py
backend_services/: celery_app.py  celery_tasks.py  experiment_orchestrator.py  firestore_mcp_server.py  main.py  mcp_manager.py  requirements.txt
cloudvr_perfguard/: Dockerfile  README.md  __init__.py  ai_research_test_results.json  cloudvr_perfguard.db  main.py  requirements.txt  test_ai_research_integration.py  test_ai_research_simple.py  test_cloudvr.db  test_cloudvr_basic.py
config/: example_experiment_configs.json  pipeline_config.json
config_templates/: basic_experiment.json  llm_experiment.json  performance_test.json
data/: captcha_1.html  captcha_2.html  groups_1.html  groups_3.html  groups_4.html  groups_6.html  groups_8.html  gsm8k.html  gsm8k_16.html  gsm8k_24.html  gsm8k_25.html  gsm8k_3.html  gsm8k_5.html  gsm8k_6.html
data_pipeline/: README.md  __init__.py  pdf_processor.py  process_pdfs.py  progress_tracker.py  test_chapter_detection.py
debug_prompts/: prompt_1755829770_AtroposAgent.txt  prompt_1755829809_AtroposAgent.txt
docs/: Digital Red Queen_ Adversarial Program Evolution in Core War with LLMs.html
environments/: README.md  anagram_environment.py  arena_hard_environment.py  (+38 more)
(+2986 files in other folders)
